# blade-bar

./: .gitignore  Makefile.am  NEWS  bar-desktop-handler.desktop.in  bar-preferences.desktop.in  configure.ac.in
bar/: Makefile.am  bar-application.c  bar-application.h  bar-base-window.c  bar-base-window.h  bar-dbus-client.c  bar-dbus-client.h  bar-dbus-service-infos.xml  bar-dbus-service.c  bar-dbus-service.h  bar-dialogs.c  bar-dialogs.h  bar-item-dialog.c  bar-item-dialog.h  bar-itembar.c  bar-itembar.h  bar-module-factory.c  bar-module-factory.h  bar-module.c  bar-module.h  bar-plugin-external-46.c  bar-plugin-external-46.h  bar-plugin-external-wrapper-infos.xml  bar-plugin-external-wrapper.c  bar-plugin-external-wrapper.h  bar-plugin-external.c  bar-plugin-external.h  bar-preferences-dialog.c  bar-preferences-dialog.glade  bar-preferences-dialog.h  bar-tic-tac-toe.c  bar-tic-tac-toe.h  bar-window.c  bar-window.h  main.c
common/: Makefile.am  bar-blconf.c  bar-blconf.h  bar-dbus.h  bar-debug.c  bar-debug.h  bar-private.h  bar-utils.c  bar-utils.h
docs/: README.gtkrc-2.0
docs/references/: Makefile.am  libbladebar-docs.xml  libbladebar-sections.txt  libbladebar.types
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libbladebar/: Makefile.am  abicheck.sh  blade-bar-convenience.c  blade-bar-convenience.h  blade-bar-image.c  blade-bar-image.h  blade-bar-macros-46.h  blade-bar-macros.h  blade-bar-plugin-provider.c  blade-bar-plugin-provider.h  blade-bar-plugin.c  blade-bar-plugin.h  libbladebar-1.0.pc.in  libbladebar-2.0.pc.in  libbladebar-config.c  libbladebar-config.h.in  libbladebar-enums.h  libbladebar.h  libbladebar.symbols  make-libbladebar-alias.pl  xfce-arrow-button.c  xfce-arrow-button.h  xfce-hvbox.c  xfce-hvbox.h
migrate/: Makefile.am  default.xml.in  main.c  migrate-46.c  migrate-46.h  migrate-config.c  migrate-config.h  migrate-default.c  migrate-default.h
plugins/actions/: Makefile.am  actions-dialog.glade  actions.c  actions.desktop.in.in  actions.h
plugins/applicationsmenu/: Makefile.am  applicationsmenu-dialog.glade  applicationsmenu.c  applicationsmenu.desktop.in.in  applicationsmenu.h  xfce4-popup-applicationsmenu.sh
plugins/clock/: Makefile.am  clock-analog.c  clock-analog.h  clock-binary.c  clock-binary.h  clock-dialog.glade  clock-digital.c  clock-digital.h  clock-fuzzy.c  clock-fuzzy.h  clock-lcd.c  clock-lcd.h  clock-time.c  clock-time.h  clock.c  clock.desktop.in.in  clock.h
plugins/directorymenu/: Makefile.am  directorymenu-dialog.glade  directorymenu.c  directorymenu.desktop.in.in  directorymenu.h  xfce4-popup-directorymenu.sh
plugins/launcher/: Makefile.am  launcher-dialog.c  launcher-dialog.glade  launcher.c  launcher.desktop.in.in  launcher.h
plugins/pager/: Makefile.am  pager-buttons.c  pager-buttons.h  pager-dialog.glade  pager.c  pager.desktop.in.in  pager.h
plugins/separator/: Makefile.am  separator-dialog.glade  separator.c  separator.desktop.in.in  separator.h
plugins/showdesktop/: Makefile.am  showdesktop.c  showdesktop.desktop.in.in  showdesktop.h
plugins/systray/: Makefile.am  systray-box.c  systray-box.h  systray-dialog.glade  systray-manager.c  systray-manager.h  systray-socket.c  systray.c  systray.desktop.in.in  systray.h
plugins/tasklist/: Makefile.am  tasklist-dialog.glade  tasklist-widget.c  tasklist-widget.h  tasklist.c  tasklist.desktop.in.in
plugins/windowmenu/: Makefile.am  windowmenu-dialog.glade  windowmenu.c  windowmenu.desktop.in.in  windowmenu.h  xfce4-popup-windowmenu.sh
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  pt.po  (+19 more)
wrapper/: Makefile.am  main.c  wrapper-module.c  wrapper-module.h  wrapper-plug.c  wrapper-plug.h
